partTimeの追加を行う処理を追加
